@@ -1,3 +1,15 @@
+2009-02-24  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Oliver Hunt.
+
+        <rdar://problem/6259220> Rename AVAILABLE_AFTER_WEBKIT_VERSION_3_1 (etc.) to match the other macros
+
+        * Carbon/CarbonUtils.h:
+        * Carbon/HIWebView.h:
+        * Plugins/WebPlugin.h:
+        * Plugins/WebPluginViewFactory.h:
+        * WebView/WebUIDelegate.h:
+
 2009-02-24  Peter Ammon  <pammon@apple.com>
 
         Reviewed by Mark Rowe.
